Corrected margin issues with dropdown on mobile; changed button color to gold

--- a/src/assets/scss/nav/_navigation.scss
+++ b/src/assets/scss/nav/_navigation.scss
@@ -20,15 +20,18 @@
 }
 
 .me-auto {
-    margin-left: 10px;
+    @media (min-width: 768px) {
+        margin-left: 10px;
+    }
 }
 
 .nav-link {
+    display: flex;
+    align-items: center;
     flex-grow: 1;
     color: #fff !important;
     background-color: #041e42;
     font-family: "Blockletter";
-    transform: scaleY(1.1);
     font-size: 1.7rem;
     padding-left: 14px !important;
     padding-right: 14px !important;
@@ -37,6 +40,10 @@
 .nav-link:hover {
     color: $cal-gold-color !important;
     text-shadow: 2px 2px 4px black;
+}
+
+.nav-text {
+    transform: scaleY(1.1);
 }
 
 .navbar-dropdown:hover .navbar-dropdown-menu {
